Fix the image width for views on mobile phones (#74)

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -18,6 +18,10 @@ body {
         display: block;
         margin-left: 1rem;
         margin-right: 1rem;
+
+        img {
+            width: 100%;
+        }
     }
 }
 
